FIx collapse

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -912,7 +912,11 @@ input.mobile-facets__checkbox {
 
 @media screen and (min-width: 990px) {
 .facets-vertical-container {
-width: 33%;
+width: 0;
+}
+
+.facets-vertical-container.open {
+  width: 33%;
 }
 }
 
